--- a/src/gridzy.css
+++ b/src/gridzy.css
@@ -1,201 +1,1 @@
-/*
- *  Mixin's - Insanen.com 
- */
-/*
- * Clearfix and Spacing - Insanen.com
- */
-/* line 27, ../scss/gridzy.scss */
-.wrapper,
-.row {
-  *zoom: 1;
-}
-/* line 29, ../scss/gridzy.scss */
-.wrapper:before,
-.row:before, .wrapper:after,
-.row:after {
-  content: " ";
-  display: table;
-}
-/* line 34, ../scss/gridzy.scss */
-.wrapper:after,
-.row:after {
-  clear: both;
-}
-
-/* line 39, ../scss/gridzy.scss */
-*,
-*:after,
-*:before {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-/*
- *  Grid variables - Insanen.com 
- */
-/*
- * BreakPoints
- */
-/*
- * Base Pallete Colors - Insanen.com
- */
-/* line 73, ../scss/gridzy.scss */
-.ndanger {
-  background: #c40808;
-}
-
-/* line 77, ../scss/gridzy.scss */
-.ndanger-li {
-  background: #f84f4f;
-}
-
-/* line 81, ../scss/gridzy.scss */
-.ninfo {
-  background: #2121a1;
-}
-
-/* line 85, ../scss/gridzy.scss */
-.ninfo-li {
-  background: #3d3dff;
-}
-
-/* line 89, ../scss/gridzy.scss */
-.ngray {
-  background: #cacaca;
-}
-
-/* line 93, ../scss/gridzy.scss */
-.ngray {
-  background: #e9e9e9;
-}
-
-/*
- * HTML Container's & Markdown's
- */
-/* line 103, ../scss/gridzy.scss */
-.container {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 60%;
-}
-
-/* line 107, ../scss/gridzy.scss */
-.container-full {
-  display: block;
-  width: 100%;
-}
-
-/* line 111, ../scss/gridzy.scss */
-.container-full .wrapper {
-  width: 100%;
-}
-
-/*
- * Image Markup, Erase if conflicting, with site.
- */
-/* line 118, ../scss/gridzy.scss */
-img {
-  width: auto;
-  max-width: 100%;
-  height: auto !important;
-}
-
-/*
- * Wrapper's
- */
-/* line 128, ../scss/gridzy.scss */
-.wrapper {
-  width: 100%;
-  margin: 0 auto;
-}
-
-/* line 137, ../scss/gridzy.scss */
-[class*='column-'] {
-  float: left;
-  padding: 1em;
-  width: 100%;
-  min-height: 1px;
-}
-
-/* line 144, ../scss/gridzy.scss */
-[class*='gridzy-'] {
-  float: left;
-  padding: 1em;
-  width: 100%;
-  min-height: 1px;
-}
-
-/*
- * Mobile View - Insanen.com
- */
-@media only screen and (min-width: 30em) {
-  /* line 156, ../scss/gridzy.scss */
-  .wrapper {
-    width: 95%;
-    max-width: 100%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-1 {
-    width: 8.33333%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-2 {
-    width: 16.66667%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-3 {
-    width: 25%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-4 {
-    width: 33.33333%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-5 {
-    width: 41.66667%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-6 {
-    width: 50%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-7 {
-    width: 58.33333%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-8 {
-    width: 66.66667%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-9 {
-    width: 75%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-10 {
-    width: 83.33333%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-11 {
-    width: 91.66667%;
-  }
-
-  /* line 161, ../scss/gridzy.scss */
-  .column-12 {
-    width: 100%;
-  }
-}
+*{margin:0;padding:0;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}*:after,*:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}img{width:auto;max-width:100%;height:auto !important}.grid-wrapper{width:100%;margin:0 auto}.grid-container{display:block;margin-left:auto;margin-right:auto;width:60%}.grid-container-full{display:block;width:100%}.grid-container-full .grid-wrapper{width:100%}[class*='gridzy-']{float:left;padding:1em;width:100%;min-height:1px}[class*='column-']{float:left;padding:1em;width:100%;min-height:1px}.grid-row,.grid-wrapper{*zoom:1}.grid-row:after,.grid-wrapper:after,.grid-row:before,.grid-wrapper:before{content:" ";display:table}.grid-row:after,.grid-wrapper:after{clear:both}.grid-color.primary{background:#db4437}.grid-color.primary-light{background:#e67c73}.grid-color.primary-dark{background:#c53929}.grid-color.accent{background:#f4b400}.grid-color.accent-light{background:#f7cb4d}.grid-color.accent-dark{background:#f09300}.grid-color.secondary{background:#4285f4}.grid-color.secondary-light{background:#7baaf7}.grid-color.secondary-dark{background:#3367d6}.grid-color.foreground{background:#4285f4}.grid-color.foreground-light{background:#e0e0e0}.grid-color.foreground-dark{background:#9e9e9e}.grid-color.foreground-darker{background:#616161}.grid-color.background{background:#bcbcbc}.grid-color.background-light{background:#bcbcbc}.grid-color.background-dark{background:#bcbcbc}.grid-color.background-darker{background:#bcbcbc}@media only screen and (min-width: 32em){.wrapper{width:95%;max-width:100%}.column-1{width:8.33333%}.column-2{width:16.66667%}.column-3{width:25%}.column-4{width:33.33333%}.column-5{width:41.66667%}.column-6{width:50%}.column-7{width:58.33333%}.column-8{width:66.66667%}.column-9{width:75%}.column-10{width:83.33333%}.column-11{width:91.66667%}.column-12{width:100%}}
